# wunderdrive

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  README.md  docker-compose.minio.yml  flake.nix  spec.md  todo.md
crates/wunderdrive-daemon/: Cargo.toml
crates/wunderdrive-daemon/src/: main.rs
crates/wunderdrive-engine/: Cargo.toml
crates/wunderdrive-engine/src/: config.rs  creds.rs  engine.rs  error.rs  extract.rs  hash.rs  index.rs  journal.rs  lib.rs  mirror.rs  ocr.rs  protocol.rs  reconcile.rs  store.rs  watch.rs
crates/wunderdrive-engine/tests/: minio.rs  mirror.rs
crates/wunderdrive-gui/: Cargo.toml
crates/wunderdrive-gui/src/: app.rs  icons.rs  ipc.rs  main.rs  theme.rs
crates/wunderdrive-tui/: Cargo.toml
crates/wunderdrive-tui/src/: main.rs
tasks/: file-browser-features-plan.md  todo.md
