[workspace]
resolver = "2"
members = [
    "crates/wunderdrive-engine",
    "crates/wunderdrive-daemon",
    "crates/wunderdrive-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "Apache-2.0"

[workspace.dependencies]
# Runtime + async
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "fs", "sync", "time", "io-util", "net"] }
futures = "0.3"
# Serialization
serde = { version = "1", features = ["derive"] }
toml = "1.1"
# Errors
thiserror = "2"
anyhow = "1"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Core engine deps
object_store = { version = "0.14", features = ["aws"] }
redb = "4.1"
blake3 = "1.8"
notify = "8"
walkdir = "2.5"
keyring = { version = "4", features = ["v1"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
# IPC
interprocess = { version = "2.4", features = ["tokio"] }
# TUI
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }

[profile.release]
lto = "thin"
codegen-units = 1
