[package]
name = "wunderdrive-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Headless daemon for wunderdrive — owns the sync engine and serves local IPC."

[[bin]]
name = "wunderdrive-daemon"
path = "src/main.rs"

[dependencies]
wunderdrive-engine = { path = "../wunderdrive-engine" }
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json = "1"
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
interprocess.workspace = true
dirs.workspace = true
