[package]
name = "wunderdrive-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Headless mirror/sync engine for wunderdrive — any S3-compatible bucket, no server."

[dependencies]
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json = "1"
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
object_store.workspace = true
redb.workspace = true
blake3.workspace = true
notify.workspace = true
walkdir.workspace = true
keyring.workspace = true
dirs.workspace = true
chrono.workspace = true
bytes = "1"
tantivy.workspace = true
lopdf.workspace = true
calamine.workspace = true
zip.workspace = true
quick-xml.workspace = true
ocrs.workspace = true
rten.workspace = true
image.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
